--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,13 @@
--- $Id: ChangeLog,v 1.96 2019/07/29 23:47:25 tom Exp $
+-- $Id: ChangeLog,v 1.98 2019/07/31 22:23:43 tom Exp $
+
+2019-07-31
+	+ switch to "--enable-warnings" in configure script, for consistency.
+
+	+ updated documentation.
+
+	+ make the "-v" verbose option more informative, showing the parameter
+	  value and also noting when an option is ignored since an explicit
+	  setting overrode an implicit one.
 
 2019-07-29
 	+ add debugging feature to show options in effect
@@ -233,7 +242,7 @@
 
 	+ add configure check for ctags, needed for some BSD ports.
 
-	+ add configure options --disable-echo and --enable-warnings.
+	+ add configure options --disable-echo and --with-warnings.
 
 	+ add RPM and Debian packages scripts, for testing.
 
