--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20190731) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 29 Jul 2019 20:57:18 -0400
+
 cindent (2.0.20190729) unstable; urgency=low
 
   * maintenance updates
