--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,13 @@
--- $Id: ChangeLog,v 1.98 2019/07/31 22:23:43 tom Exp $
+-- $Id: ChangeLog,v 1.102 2019/08/01 20:39:38 tom Exp $
+
+2019-08-01
+	+ add _XtString, etc., to xxx-profile.
+
+	+ allow for "/*xxx*/" single-line comments in tdindent script when
+	  working around GNU indent's lack of "--profile" option.
+
+	+ simplify "-s" option in tdindent script, using "-nut" which is
+	  assumed in both cindent and GNU indent.
 
 2019-07-31
 	+ switch to "--enable-warnings" in configure script, for consistency.
