--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20190804) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sun, 04 Aug 2019 14:37:04 -0400
+
 cindent (2.0.20190801) unstable; urgency=low
 
   * maintenance updates
