--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20191122) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Thu, 21 Nov 2019 04:37:15 -0500
+
 cindent (2.0.20191120) unstable; urgency=low
 
   * maintenance updates
