--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20200205) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Wed, 05 Feb 2020 18:42:02 -0500
+
 cindent (2.0.20191123) unstable; urgency=low
 
   * maintenance updates
