--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20200608) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 08 Jun 2020 16:32:03 -0400
+
 cindent (2.0.20200205) unstable; urgency=low
 
   * maintenance updates
