--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20201004) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sun, 04 Oct 2020 07:32:23 -0400
+
 cindent (2.0.20200608) unstable; urgency=low
 
   * maintenance updates
