--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
--- $Id: ChangeLog,v 1.124 2020/12/12 00:21:13 tom Exp $
+-- $Id: ChangeLog,v 1.127 2021/01/10 00:50:56 tom Exp $
+
+2021-01-09
+	+ modify test-script to not error-out when reporting differences for
+	  twm-indent or xorg-indent, since those use GNU indent, which varies
+	  unpredictably.
+
+	+ resync with my-autoconf.
 
 2020-12-11
 	+ add typedef names from form.h and menu.h to jpf-profile.
