--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20210109) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sat, 09 Jan 2021 18:51:08 -0500
+
 cindent (2.0.20201211) unstable; urgency=low
 
   * maintenance updates
